--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -3,5 +3,7 @@
 {{#each posts}}
     <h2>{{{titulo}}}</h2>
     <p>{{{conteudo}}}</p>
+    <a href="/deletar/{{id}}"><button style="background-color: red; color: antiquewhite; 
+    border: 0; padding: 10px; border-radius: 3px; cursor: pointer;">Deletar</button></a>
     <hr />
 {{/each}}
